--- a/views/layouts/footer.twig
+++ b/views/layouts/footer.twig
@@ -2,6 +2,5 @@
     <p class="float-right">
         <a href="#">Nazad na početak stranice</a>
     </p>
-    <p>WingWiFi aplikacija za upravljanje WiFi vaučerima!</p>
-    <p>Razvio i održava Wing IT tim.</p>
+    <p>WingWiFi aplikacija za upravljanje WiFi vaučerima! Razvio i održava Wing IT tim.</p>
 </div>
