--- a/views/error.twig
+++ b/views/error.twig
@@ -1,5 +1,14 @@
 {% extends "base.twig" %}
 
 {% block main %}
-
+    <div class="error-template">
+        <h1>Greška!</h1>
+        <h2>Došlo je do problema pri izvršavanju! </h2>
+        <div class="error-details">
+            {{ errorMsg }}
+        </div>
+        <div class="error-actions">
+            <a href="{{ home }}" class="btn btn-primary btn-lg"><span class="fa fa-home"></span> Vrati me na početnu stranicu</a>
+        </div>
+    </div>
 {% endblock %}
