--- a/views/site_page.twig
+++ b/views/site_page.twig
@@ -1,20 +1,23 @@
 {% extends "base.twig" %}
-
+{% block title %}<h1 class="jumbotron-heading">Čvor {{ site.desc }}</h1><br /><h3>Lista vaučera</h3>{% endblock %}
 {% block main %}
-        <table class="table">
-            <thead>
+<div class="table-responsive">
+    <table class="table table-hover">
+        <thead class="thead-dark">
             <tr>
                 <th scope="col">#</th>
-                <th scope="col">Trajanje</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Kod</th>
+                <th scope="col">Kreiran</th>
+                <th scope="col">Ističe</th>
+                <th scope="col">Akcije</th>
             </tr>
-            </thead>
-            <tbody>
+        </thead>
+        <tbody>
             <tr>
                 <th scope="row">1</th>
                 <td>Mark</td>
                 <td>Otto</td>
+                <td>@mdo</td>
                 <td>@mdo</td>
             </tr>
             <tr>
@@ -22,14 +25,21 @@
                 <td>Jacob</td>
                 <td>Thornton</td>
                 <td>@fat</td>
+                <td>@mdo</td>
             </tr>
             <tr>
                 <th scope="row">3</th>
                 <td>Larry</td>
                 <td>the Bird</td>
                 <td>@twitter</td>
+                <td>@mdo</td>
             </tr>
-            </tbody>
-        </table>
-    </div>
+        </tbody>
+    </table>
+</div>
+<div class="btn-group">
+    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#voucher_add">Kreiraj vaučer</button>
+    <button type="button" class="btn btn-secondary" onclick="location='{{ home }}/index.php?view=sites_list'">Nazad na listu čvorova</button>
+</div>
+{% include("layouts/add_voucher.twig") %}
 {% endblock %}
