--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,3 +16,15 @@ body {
 .footer p {
     margin-bottom: 0 !important;
 }
+.error-template {
+    padding: 40px 15px;
+    text-align: center;
+    margin: auto;
+}
+.error-actions {
+    margin-top:15px;
+    margin-bottom:15px;
+}
+.error-actions .btn {
+    margin-right:10px;
+}
