--- a/views/layouts/footer.twig
+++ b/views/layouts/footer.twig
@@ -1,6 +1,3 @@
 <div class="container">
-    <p class="float-right">
-        <a href="#">Nazad na početak stranice</a>
-    </p>
-    <p>WingWiFi aplikacija za upravljanje WiFi vaučerima! Razvio i održava Wing IT tim.</p>
+    <p style="text-align: center">WingWiFi aplikacija za upravljanje WiFi vaučerima! Razvio i održava Wing IT tim. <a href="{{ home }}/admin/">Admin sekcija</a></p>
 </div>
