--- a/views/layouts/footer.twig
+++ b/views/layouts/footer.twig
@@ -1,3 +1,3 @@
 <div class="container">
-    <p style="text-align: center">WingWiFi aplikacija za upravljanje WiFi vaučerima! Razvio i održava Wing IT tim. <a href="{{ home }}/admin/">Admin sekcija</a></p>
+    <p style="text-align: center">WingWiFi aplikacija za upravljanje WiFi vaučerima! Razvio i održava Wing IT tim. <a href="{{ home }}/admin/" target="_blank">Admin sekcija</a></p>
 </div>
