--- a/views/sites_list.twig
+++ b/views/sites_list.twig
@@ -1,6 +1,7 @@
 {% extends "base.twig" %}
 {% block title %}<h1 class="jumbotron-heading">Lista čvorova</h1>{% endblock %}
 {% block main %}
+    <div class="row">
     {% for site in sitesList %}
         <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
@@ -15,4 +16,5 @@
             </div>
         </div>
     {% endfor %}
+    </div>
 {% endblock %}
