--- a/views/layouts/add_voucher.twig
+++ b/views/layouts/add_voucher.twig
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="title">Keriranje novog vaučera</h5>
+                <h5 class="modal-title" id="title">Kreiranje novog vaučera</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Zatvori">
                     <span aria-hidden="true">&times;</span>
                 </button>
