Setting default site

--- a/views/layouts/add_voucher.twig
+++ b/views/layouts/add_voucher.twig
@@ -12,11 +12,13 @@
                     <div class="form-group row">
                         <label for="time" class="col-sm-4 col-form-label">Trajanje vaučera:</label>
                         <select class="custom-select col-sm-8" id="time">
-                            <option value="15">15 minuta</option>
-                            <option value="30">30 minuta</option>
-                            <option value="60" selected>Sat vremena</option>
-                            <option value="180">3 sata</option>
-                            <option value="1140">Ceo dan</option>
+                            <option value="360" selected>6 sati</option>
+                            <option value="720">12 sati</option>
+                            <option value="1140">Dan</option>
+                            <option value="2280">Dva dana</option>
+                            <option value="4320">Tri dana</option>
+                            <option value="5700">Pet dana</option>
+                            <option value="7980">Sedam dana</option>
                         </select>
                     </div>
                 </div>
