Adding print option

--- a/views/site_page.twig
+++ b/views/site_page.twig
@@ -25,7 +25,7 @@
                     <td>
                         <div class="btn-group btn-group-xs">
                             <button type="button" class="btn btn-xs" title="Obriši" onclick="removeVoucher('{{ voucher._id }}')"><i class="fas fa-trash"></i></button>
-                            <button type="button" class="btn btn-xs" title="Štampaj"><i class="fas fa-print"></i></button>
+                            <button type="button" class="btn btn-xs" title="Štampaj" onclick="printVoucher('{{ voucher.code }}')"><i class="fas fa-print"></i></button>
                         </div>
                     </td>
                 </tr>
@@ -64,6 +64,25 @@
         }).done(function (data) {
             if (data.status == true) {
                 location.reload(true);
+            } else {
+                // raise warning
+                console.log(data.message);
+            }
+        });
+    }
+    function printVoucher(code) {
+        jQuery.ajax({
+            url  : '{{ home }}/index.php',
+            method: 'GET',
+            dataType: 'json',
+            data : {
+                action : 'printVoucher',
+                type   : 'ajax',
+                code   : code
+            }
+        }).done(function (data) {
+            if (data.status == true) {
+                console.log('PRINTED!');
             } else {
                 // raise warning
                 console.log(data.message);
