--- a/views/base.twig
+++ b/views/base.twig
@@ -32,5 +32,7 @@
         <script src="/assets/js/bootstrap.bundle.min.js"></script>
         <script src="/assets/js/custom.js"></script>
         {% endblock %}
+        {% block modals %}
+        {% endblock %}
     </body>
 </html>
