--- a/views/layouts/select_lang.twig
+++ b/views/layouts/select_lang.twig
@@ -14,6 +14,7 @@
                         <select class="col-sm-8 selectpicker" id="lang">
                             <option value="rs" selected data-content='<i class="flag-icon flag-icon-rs"></i> Srpski'></option>
                             <option value="en" data-content='<i class="flag-icon flag-icon-gb"></i> Engleski'></option>
+                            <option value="it" data-content='<i class="flag-icon flag-icon-it"></i> Italijanski'></option>
                             <option value="de" data-content='<i class="flag-icon flag-icon-de"></i> Nemački'></option>
                             <option value="fr" data-content='<i class="flag-icon flag-icon-fr"></i> Francuski'></option>
                             <option value="es" data-content='<i class="flag-icon flag-icon-es"></i> Španski'></option>
