Fixing refer bug

--- a/views/site_page.twig
+++ b/views/site_page.twig
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="/assets/css/bootstrap-select.min.css" />
     <link rel="stylesheet" href="/assets/css/flag-icon.min.css" />
     <link rel="stylesheet" href="/assets/css/datatables.min.css" />
-    <title>Čvor {{ site.desc }} | Lista vaučera</title>
+    <title>WiFi: {{ site.desc }} | Lista vaučera</title>
 {% endblock %}
-{% block title %}<h1 class="jumbotron-heading">Čvor {{ site.desc }}</h1><br /><h3>Lista vaučera</h3>{% endblock %}
+{% block title %}<h1 class="jumbotron-heading">WiFi: {{ site.desc }}</h1><br /><h3>Lista vaučera</h3>{% endblock %}
 {% block main %}
 {% if vouchers is not empty %}
 <div class="row float-right">
